unpackaged/main/default/objects/EventApi__Event_Status_Template__mdt/EventApi__Event_Status_Template__mdt.object-meta.xml
<CustomObject>
    <description>Templates for Lightning Event Statuses.</description>
    <label>Event Status Template</label>
    <pluralLabel>Event Status Templates</pluralLabel>
</CustomObject>