unpackaged/main/default/objects/EventApi__Event_Status_Template__mdt/fields/EventApi__Closed_Status_Text__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Closed_Status_Text__c</fullName>
    <description>The text entered in this field will appear in bold in place of the register button when the registration is closed.</description>
    <inlineHelpText>The text entered in this field will appear in bold in place of the register button when the registration is closed.</inlineHelpText>
    <label>DEPRECATED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>