unpackaged/main/default/objects/EventApi__Event_Status_Template__mdt/fields/EventApi__Event_Registration_Style__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event_Registration_Style__c</fullName>
    <description>**Required** Linked to related event registration style.</description>
    <inlineHelpText>**Required** Linked to related event registration style.</inlineHelpText>
    <label>Event Registration Style</label>
    <referenceTo>EventApi__Event_Registration_Style__mdt</referenceTo>
    <relationshipLabel>Event Status Templates</relationshipLabel>
    <relationshipName>Event_Status_Templates</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>