unpackaged/main/default/objects/EventApi__Event_Status_Template__mdt/fields/EventApi__Is_Enabled_Editable__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Enabled_Editable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, this record will be enabled as a template.</description>
    <inlineHelpText>When checked, this record will be enabled as a template.</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>