unpackaged/main/default/objects/EventApi__Event_Status_Template__mdt/fields/EventApi__Is_Event_Active__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Event_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the status is set as the current event status, the value of this field will be mapped to the Is Active field on the event.</description>
    <inlineHelpText>When the status is set as the current event status, the value of this field will be mapped to the Is Active field on the event.</inlineHelpText>
    <label>Is Event Active</label>
    <type>Checkbox</type>
</CustomField>