unpackaged/main/default/objects/EventApi__Event_Status_Template__mdt/fields/EventApi__Is_Event_Published__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Event_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a status is set as the current event status, the value of this field will be mapped to the Is Published field on the event.</description>
    <inlineHelpText>When a status is set as the current event status, the value of this field will be mapped to the Is Published field on the event.</inlineHelpText>
    <label>Is Event Published</label>
    <type>Checkbox</type>
</CustomField>