unpackaged/main/default/objects/EventApi__Event_Status_Template__mdt/fields/EventApi__Order__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Order__c</fullName>
    <description>** REQUIRED ** Defines the timeline for an event&#39;s statuses, automatic event transitions will only occur in ascending order.</description>
    <inlineHelpText>** REQUIRED ** Defines the timeline for an event&#39;s statuses, automatic event transitions will only occur in ascending order.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>