unpackaged/main/default/objects/EventApi__Event_Status_Template__mdt/fields/EventApi__Status_Transition_Criteria__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Status_Transition_Criteria__c</fullName>
    <description>** CONDITIONALLY REQUIRED ** SOQL query WHERE clause for automating the transition to this status on the Event. A value for this field is required when the Enable Transition for Status checkbox is checked.</description>
    <inlineHelpText>** CONDITIONALLY REQUIRED ** SOQL query WHERE clause for automating the transition to this status on the Event. A value for this field is required when the Enable Transition for Status checkbox is checked.</inlineHelpText>
    <label>Status Transition Criteria</label>
    <type>TextArea</type>
</CustomField>